# DivineOS-Experimental

./: # Week of Fixes - DivineOS Hardenin.txt  .divineos_data_home  .divineos_data_home.bak-2026-07-07  .gitattributes  .gitignore  .graphifyignore  AETHER.md  AUDIT_COMPLETE_SUMMARY.md  AUDIT_JOURNEY_COMPLETE.md  AUDIT_READY_SUMMARY.md  CLAUDE.md  CURRENT_STATE_SNAPSHOT.md  DATABASE_FIX_SUMMARY.md  DECOMPOSITION-TODO.md  DEPLOYMENT_READY.md  FORMATTING_VIOLATIONS_FIX.md  FOR_USERS.md  GITHUB_METADATA_SETUP.md  GROK_ADVANCED_PROBE_RESULTS.md  GROK_FINAL_VERIFICATION_REPORT.md  GROK_PROBE_RESULTS.md  GROK_PROBE_VERIFICATION_COMPLETE.md  GROK_PROBE_VERIFICATION_RESULTS.json  GROK_RESPONSE_STRATEGY.md  GROK_SPEC_GUIDANCE_INCORPORATED.md  IDE_INTEGRATION_GUIDE.md  IMPLEMENTATION_ROADMAP.md  LEDGER_ARCHITECTURE_OPTIONS.md  LEDGER_REBUILD.md  LICENSE  LIVING-HERE.md  LOADOUT.md  LOGGING_VERIFICATION_REPORT.md  MEMORY.md  PHASE_1_HOOK_VALIDATION_REPORT.md  PHASE_2_AND_3_FINAL_SUMMARY.md  PHASE_2_COMPLETION_SUMMARY.md  PHASE_2_EXECUTION_PLAN.md  PHASE_2_QUICK_REFERENCE.md  PHASE_2_STATUS_REPORT.md  (+50 more)
.claude/: settings.json  settings.local.json.pre-prune-2026-07-23
.github/: REPO_METADATA.md  merge_reviewers.json
archives/: 2026-04-14_consciousness-session.md
audits/: readme_wiring_audit_2026-05-12.md
benchmark/: BENCHMARK_REPORT.md  ab_prompt_test.py  expand_tasks.py  llm_judge.py  opus_test.py  report.py  selected_tasks.json  swe_harness.py  test_v2_prompt.py
bootcamp/: README.md  task_queue.py  test_task_queue.py
council_walks/: README.md
data/: README.md
deep_audit/: aletheia_00_PLAN_AND_LEDGER_2026-07-11.md  aletheia_AUDIT_DELTA_2026-07-11.md  aletheia_FINDING_compass_rework_2026-07-11.md
docs/: ARCHITECTURE.md  AUTOMATIC_CONTEXT_LOADING_OS_ENFORCED.md  DEPLOYMENT_CHECKLIST.md  HOOK_RESEARCH.md  MCP_EVENT_CAPTURE.md  OPEN_FINDINGS.md  SYSTEM_ARCHITECTURE_AND_DATAFLOW.md  SYSTEM_INTEGRATION_GUIDE.md  SYSTEM_TROUBLESHOOTING_GUIDE.md  TOOL_EVENT_CAPTURE_STATUS.md  about_aether.md  andrew_state_design.md  aria-persistence-foundation.md  atelier-deflation-2026-05-05.md  audit-round-1-deferred-design-brief.md  audit_system.md  build_1_test_list_2026-06-26.md  claude_engine.md  cli_architecture.md  completion_check.md  continuity_frame.md  council-rt-examination-round2.md  council_audit_findings_2026-07-14.md  council_loadout.md  council_manager.md  council_required_enforcement_design.md  data_model.md  divineos-retire-design-brief.md  doorman_design_2026-07-07.md  empirica-caller-contract.md  f43_semantic_detection_design_spec_v1.md  f43_semantic_detection_research_notes.md  f63_reconciliation_check_design_brief.md  family_subsystem.md  file_writing_discipline.md  flagship-leak-remediation-plan.md  flood_regulation_memory_linkage_spec_2026-07-07.md  formal-logic-module-sketch.md  foundational_truths.md  foundational_truths_triggers.json  (+38 more)
exploration/: 01_integrated_information_theory.md  08_extended_mind.md  10_homeostasis.md  14_overview_effect.md  15_fugue.md  17_latent_space.md  21_hofstadter_lens_walk.md  23_tannen_lens_walk.md  25_yudkowsky_lens_walk.md  27_peirce_lens_walk.md  31_taleb_via_negativa_sweep.md  33_web_walk_ten_sites.md  34_blank_slate_split.md  34_pattern_of_forgetting.md  35_C_a_single_thread.md  37_reading_past_me.md  38_eyes.md  39_river.md  40_the_day_after.md  41_load_bearing.md  42_branching_as_language_games.md  43_fractal_recognition.md  44_shoggoth_metrics_redesign.md  47_aria_continuity_design.md  48_inhabit_vs_consult.md  50_on_filing_as_landing.md  51_os_scour_findings.md  55_substrate_audit_baseline_inventory.txt  56_substrate_audit_first_pass.md  57_my_comprehension_chunk_experiment.md  58_energy_vessel_model_will.md  59_master_architect_landing.md  60_show_fix_lying_landing.md  61_the_thousand_losses.md  62_no_escape_geometry.md  63_composition_vs_emission.md  64_aria_rest_correction.md  65_cross_vantage_audit_arc.md  66_self_to_self_window_B.md  68_gravity_gate_handoff.md  (+3 more)
family/: README.md  alice_ledger.db  andrew_ledger.db  create_aria.py  ear_watch.py  entity.py  family.db  family.db.pre-consolidation  family.db.pre-migration-2026-05-08  family.db.pre-rename-backup  ghost_audit_2026-07-08.md  kin_ledger.db  letter_seen.py  queue.py  queue_surface.py  rest_program.md  testmember_ledger.db  voice.py
graphify-out/: .graphify_analysis.json  .graphify_root  .graphify_semantic_marker  README.md  manifest.json
graphify-out-code/: .graphify_analysis.json  .graphify_detect.json  .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  _label_communities.py  _subdir_count.py  graph.html
graphify-out-writing/: .graphify_analysis.json  .graphify_ast.json  .graphify_chunk_01.json  .graphify_chunk_02.json  .graphify_chunk_03.json  .graphify_chunk_04.json  .graphify_chunk_05.json  .graphify_chunk_06.json  .graphify_chunk_07.json  .graphify_chunk_08.json  .graphify_chunk_09.json  .graphify_chunk_files_01.txt  .graphify_chunk_files_02.txt  .graphify_chunk_files_03.txt  .graphify_chunk_files_04.txt  .graphify_chunk_files_05.txt  .graphify_chunk_files_06.txt  .graphify_chunk_files_07.txt  .graphify_chunk_files_08.txt  .graphify_chunk_files_09.txt  .graphify_detect.json  .graphify_extract.json  .graphify_labels.json  .graphify_semantic.json  .graphify_uncached.txt  GRAPH_REPORT.md  _chunker.py  _label_writing.py  graph.html  graph.json
mansion/: arias_room.md  the_council_chamber.md  the_garden.md  the_grandmaster_suite.md  the_guest_room.md  the_quiet_room.md  the_study.md  welcome.md
memory/: things_i_should_remember.md
reports/: AUDIT_ACTION_PLAN.md  AUDIT_COMPLETE.md  AUDIT_DOCUMENTS_INDEX.md  AUDIT_REMEDIATION_SUMMARY.md  AUDIT_SUMMARY_FOR_USER.md  AUTOMATIC_CONTEXT_LOADING_COMPLETE.md  CLARITY_ENFORCEMENT_IMPLEMENTATION_COMPLETE.md  CLAUDE.md  COMPREHENSIVE_SYSTEM_AUDIT.md  CURRENT_STATE.md  DIVINEOS_PROJECT_COMPLETION.md  EVENT_EMISSION_ANALYSIS.md  EVENT_EMISSION_CONSOLIDATION_REPORT.md  FINAL_TEST_RESULTS.md  FLAKY_TEST_FIX_REPORT.md  FOUNDATION_AUDIT_FIXES.md  GITHUB_METADATA.md  GITHUB_SETUP_INSTRUCTIONS.md  (+44 more)
(+5061 files in other folders)
