[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "divineos"
version = "1.0.0"
description = "An operating system for AI agents — memory, continuity, accountability, and learning across sessions."
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "loguru>=0.7.0",
    "ftfy>=6.0",
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.2.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "vulture>=2.0",
    "bandit>=1.7",
    "mutmut>=3.0",
]

[project.scripts]
divineos = "divineos.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
ignore = [
    "PLR2004",  # Magic value comparisons are acceptable in validation
    "TRY300",  # Try/except/else patterns are acceptable
    "TRY003",  # Long exception messages are acceptable
    "PLC0415",  # Import-outside-top-level is acceptable for circular imports
    "C901",    # Complex functions are acceptable for validation logic
    "PLR0912", # Too many branches is acceptable for validation
    "PLR0913", # Too many arguments is acceptable for complex operations
    "PLR0911", # Too many return statements is acceptable
    "PLR0915", # Too many statements is acceptable
    "ARG001",  # Unused arguments are acceptable for callbacks
    "ARG002",  # Unused arguments are acceptable for callbacks
    "E501",    # Formatter targets 100; remaining long lines are strings/SQL that can't auto-wrap
    "FBT001",  # Boolean-typed positional arguments are acceptable
    "FBT002",  # Boolean default positional arguments are acceptable
    "ANN401",  # Dynamically typed expressions are acceptable
    "PERF401", # Performance issues are acceptable
    "EM102",   # Exception f-strings are acceptable
    "PLW0603", # Global statement is acceptable
    "D401",    # Docstring imperative mood is acceptable
    "PERF203", # Try-except performance is acceptable
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
timeout = 30
addopts = "--strict-markers"

[tool.coverage.run]
source = ["divineos"]
branch = true
omit = [
    "src/divineos/hooks/hook_diagnostics.py",
    "src/divineos/integration/mcp_event_capture_server.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 75
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "pass",
    "raise NotImplementedError",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.mutmut]
paths_to_mutate = "src/divineos/core/"
tests_dir = "tests/"
runner = "python -m pytest tests/ -q --tb=no -x"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
